@@ -251,7 +251,8 @@ export(
     "featureChromatograms",
     "hasFilledChromPeaks",
     "findChromPeaksIsolationWindow",
-    "reconstructChromPeakSpectra"
+    "reconstructChromPeakSpectra",
+    "groupOverlaps"
 )
 
 ## New analysis methods
