@@ -787,50 +787,38 @@ rowRla <- function(x, group, log.transform = TRUE) {
     cbind(start = new_start[idx], end = new_end[idx])
 }
 
-## #' Define a unique identifier for each chromatographic peak within the chrom
-## #' peak matrix by concatenating as many columns as needed.
-## #'
-## #' @param x `chromPeaks` matrix (as returned by `chromPeaks`).
-## #'
-## #' @noRd
-## #'
-## #' @author Johannes Rainer
-## .chrom_peak_id <- function(x) {
-##     if (nrow(x)) {
-##         cns <- c("rt", "rtmin", "rtmax", "mz", "mzmin", "mzmax", "into", "maxo")
-##         cns <- cns[cns %in% colnames(x)]
-##         ids <- apply(x[, cns, drop = FALSE], 1, paste0, collapse = "-")
-##         if (length(ids) != length(unique(ids)))
-##             stop("Can not define unique identifiers based on columns: ",
-##                  paste0(cns, collapse = ", "))
-##         ids
-##     } else character()
-## }
-
-
-## #' @examples
-## #' x1_high <- c(0.000012323)
-## #' x1_low <- c(0.0000034302)
-## #' x2_high <- c(0.000012322)
-## #' x2_low <- c(0.0000034301)
-## .overlap <- function(x1_low, x1_high, x2_low, x2_high, res = 1e12) {
-##     library(IRanges)
-##     x1 <- IRanges(round(x1_low * res), round(x1_high * res))
-##     x2 <- IRanges(round(x2_low * res), round(x2_high * res))
-## }
-
-
-## Use IRanges for this...
-## 1) find overlaps in one dimension.
-## 2) find overlaps in second dimension.
-## Given:
-## MS1 peaks with m/z range, rt range.
-## MS2 peaks with rt.
-## finding the MS2 spectra related to a single mass peak in a MS1 spectrum:
-## one MS2 is associated to a single MS1:
-## MS2: precursor is the MS1 spectrum ID, target m/z (lower and upper bound),
-##      selected m/z, peak intensity.
-## So, for a peak:
-## - select spectra for the rt range of the peak.
-## - get all MS2 spectra for these spectra.
-## - select those MS2 that have an selected ion m/z within m/z range.
+#' @title Group overlapping ranges
+#'
+#' @description
+#'
+#' `groupOverlaps` identifies overlapping ranges in the input data and groups
+#' them by returning their indices in `xmin` `xmax`.
+#'
+#' @param xmin `numeric` (same length than `xmax`) with the lower boundary of
+#'     the range.
+#'
+#' @param xmax `numeric` (same length than `xmin`) with the upper boundary of
+#'     the range.
+#'
+#' @return `list` with the indices of grouped elements.
+#'
+#' @author Johannes Rainer
+#'
+#' @md
+#'
+#' @examples
+#'
+#' x <- c(2, 12, 34.2, 12.4)
+#' y <- c(3, 16, 35, 36)
+#'
+#' groupOverlaps(x, y)
+groupOverlaps <- function(xmin, xmax) {
+    tolerance <- sqrt(.Machine$double.eps)
+    reduced_ranges <- .reduce(xmin, xmax)
+    res <- vector("list", nrow(reduced_ranges))
+    for (i in seq_along(res)) {
+        res[[i]] <- which(xmin >= reduced_ranges[i, 1] - tolerance &
+                          xmax <= reduced_ranges[i, 2] + tolerance)
+    }
+    res
+}
