@@ -1,0 +1,32 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/functions-utils.R
+\name{groupOverlaps}
+\alias{groupOverlaps}
+\title{Group overlapping ranges}
+\usage{
+groupOverlaps(xmin, xmax)
+}
+\arguments{
+\item{xmin}{\code{numeric} (same length than \code{xmax}) with the lower boundary of
+the range.}
+
+\item{xmax}{\code{numeric} (same length than \code{xmin}) with the upper boundary of
+the range.}
+}
+\value{
+\code{list} with the indices of grouped elements.
+}
+\description{
+\code{groupOverlaps} identifies overlapping ranges in the input data and groups
+them by returning their indices in \code{xmin} \code{xmax}.
+}
+\examples{
+
+x <- c(2, 12, 34.2, 12.4)
+y <- c(3, 16, 35, 36)
+
+groupOverlaps(x, y)
+}
+\author{
+Johannes Rainer
+}
