@@ -1,5 +1,6 @@
 Changes in version 3.9.2
 
+- Add groupOverlaps function to group arbitrary ranges.
 - Add quantify,XCMSnExp object to quantify an XCMSnExp into a
   SummarizedExperiment.
 - Fine-tune MergeNeighboringPeaks peak refinement method: the average of the
